Give head-wrap a min width and max width for the elements to remain fixed when zoomed and out

--- a/src/index.css
+++ b/src/index.css
@@ -7,26 +7,32 @@ body {
 }
 
 header {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
   background-color: white;
-  display: -webkit-box;
-  display: flex;
-  font-family: 'Montserrat Bold', sans-serif;
-  height: 5.938rem;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin: 0 auto;
+  margin: 0 auto; 
 }
 
-header .header-text {
+.header-text {
   /* -ms-flex-align: center; */
   display: flex;
   justify-content: center;
   align-items: center;
   margin-left: 3rem;
+}
+
+.head-wrap {
+  max-width: 1500px;
+  min-width: 1000px;
+  display: -webkit-box;
+  display: flex;
+  font-family: 'Montserrat Bold', sans-serif;
+  max-height: 7.938rem;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 0 auto;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 header .header-text > * {
